# The MIT License (MIT)
#
# Copyright (c) 2020 Philippe Proulx <pproulx@efficios.com>
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
# IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
# CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
# TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
# SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'barectf'
version = '3.1.1'
description = 'Generator of ANSI C tracers which output CTF data streams'
license = 'MIT'
authors = ['Philippe Proulx <eeppeliteloop@gmail.com>']
homepage = 'https://barectf.org/'
repository = 'https://github.com/efficios/barectf/'
keywords = [
    'ctf',
    'generator',
    'tracing',
    'bare-metal',
    'bare-machine',
]
classifiers = [
    'Development Status :: 6 - Mature',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: C',
    'Topic :: Software Development :: Code Generators',
]
packages = [{include = 'barectf'}]

[tool.poetry.dependencies]
python = '^3.6'
termcolor = '^1.1'
pyyaml = '^5.3'
jsonschema = '^3.2'
setuptools = '*'
jinja2 = '^3.0'

[tool.poetry.dev-dependencies]
flake8 = '*'
pylint = '*'
mypy = '*'
pytest = '^6'
pytest-xdist = '^2'

[tool.poetry.scripts]
barectf = 'barectf.cli:_run'

[tool.poetry.urls]
'Bug tracker' = 'https://github.com/efficios/barectf/issues/'
'Code review' = 'https://review.lttng.org/admin/repos/barectf'
'Continuous integration' = 'https://ci.lttng.org/job/barectf_master_build/'
'Commercial support' = 'https://www.efficios.com/contact/'
